@@ -16,10 +16,10 @@ function Assert-AdminPrivileges
 {
     <#
     .SYNOPSIS
-    Throws an exception if the user doesn't have administrator privileges.
+    Writes an error and returns false if the user doesn't have administrator privileges.
 
     .DESCRIPTION
-    Many scripts and functions require the user to be running as an administrator.  This function checks if the user is running as an administrator or with administrator privileges and **throws an exception** if the user doesn't.  
+    Many scripts and functions require the user to be running as an administrator.  This function checks if the user is running as an administrator or with administrator privileges and writes an error if the user doesn't.  
 
     .LINK
     Test-AdminPrivileges
@@ -27,7 +27,7 @@ function Assert-AdminPrivileges
     .EXAMPLE
     Assert-AdminPrivileges
 
-    Throws an exception if the user doesn't have administrator privileges.
+    Writes an error that the user doesn't have administrator privileges.
     #>
     [CmdletBinding()]
     param(
@@ -35,6 +35,8 @@ function Assert-AdminPrivileges
     
     if( -not (Test-AdminPrivileges) )
     {
-        throw "You are not currently running with administrative privileges.  Please re-start PowerShell as an administrator (right-click the PowerShell application, and choose ""Run as Administrator"")."
+        Write-Error "You are not currently running with administrative privileges.  Please re-start PowerShell as an administrator (right-click the PowerShell application, and choose ""Run as Administrator"")."
+        return $false
     }
+    return $true
 }
